# zero2prod

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: general.yml
.sqlx/: query-39303e4f7a58b37999f94d0dd84307eb4cf933de762c856b894c0b8ca2bcd964.json
configuration/: base.yaml  test.yaml
migrations/: 20240616162138_create_table_subscriptions.sql  20240626202902_add_status_to_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
