[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.6.0"
chrono = "0.4.38"
config = "0.14.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1", features = ["derive"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
validator = "0.18.1"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
    "migrate",
    "sqlite"
]

[dev-dependencies]
actix-rt = "2.9.0"
claim = "0.5.0"
fake = "2.9.2"
once_cell = "1.19.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
wiremock = "0.6.0"
